# Image2Biomass

./: .gitignore  069.py  070.py  AGENTS.md  CLAUDE.md  README_COLOB_SETUP.md  TORCHVISION_FIX.md  data_description.md  pyproject.toml  test_environment.py
data/: Breakthrough_Strategy_0.70_to_0.79.md  CSIRO_Competition_Strategy_DINOv2.md  EDA_Report_CSIRO_Biomass.md  Strategy_Train_vs_Inference.md  train_wide.csv
docs/: DIAGNOSTIC_ANALYSIS.md  DINOV3_GOLD_STRATEGY.md  HYBRID_APPROACH_DESIGN.md  data_augmentation.md
notebooks/: 01_eda.py  02_train_colab.ipynb  02_train_colab.py  03_train_colab.ipynb  03_train_colab.py  05_train_kaggle.ipynb  05_train_kaggle.py  06_baseline_submission.ipynb  06_baseline_submission.py  07_physics_constrained.ipynb  07_physics_constrained.py  08_auxiliary_task.ipynb  08_auxiliary_task.py  09_pseudo_labeling.ipynb  09_pseudo_labeling.py  10_pseudo_labeling_full.ipynb  10_pseudo_labeling_full.py  11_hybrid_approach.ipynb  11_hybrid_approach.py  12_dinov3_infer.ipynb  12_dinov3_infer.py  12_dinov3_train.ipynb  12_dinov3_train.py  13_optimized_infer.ipynb  13_optimized_infer.py  13_optimized_train.ipynb  13_optimized_train.py  14_improved_infer.ipynb  14_improved_infer.py  14_improved_train.ipynb  14_improved_train.py  15_back_to_basics.ipynb  15_back_to_basics_infer.ipynb  15_back_to_basics_infer.py  16_hyperparameter_tuning.ipynb  16_hyperparameter_tuning.py  17b_gap_reduction_infer.ipynb  17b_gap_reduction_infer.py  18_simple_model_tuning.ipynb  18_simple_model_tuning.py  (+40 more)
src/: AGENTS.md  __init__.py  config.py  dataset.py  losses.py  (+2 more)
(+3 files in other folders)
