[project]
name = "image2biomass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "albumentations>=1.3",
    "tqdm>=4.65",
]
